--- a/src/ts/component/basic/Basic.html
+++ b/src/ts/component/basic/Basic.html
@@ -1,5 +1,5 @@
 <div>
-    <ul *ngFor="let item of users">
-        <li>Hello {{item.name}}</li>
+    <ul *ngFor="let item of users;let i = index">
+        <li>{{i+1}} : Hello {{item.name}}</li>
     </ul>
 </div>
