--- a/src/ts/component/httpService/HttpService.html
+++ b/src/ts/component/httpService/HttpService.html
@@ -1,3 +1,3 @@
-<ul *ngFor="let item of admins">
-    <li>{{item.userName}}</li>
+<ul *ngFor="let item of admins;let i = index">
+    <li>{{i+1}}.{{item.userName}}</li>
 </ul>
