--- a/src/ts/component/validateForm/ValidateForm.html
+++ b/src/ts/component/validateForm/ValidateForm.html
@@ -3,7 +3,7 @@
         <h1>Hero Form</h1>
         <form *ngIf="active" (ngSubmit)="onSubmit()" #heroForm="ngForm">
             <div class="form-group">
-                <label for="name">Name</label>
+                <label >Name</label>
                 <input type="text" class="form-control" required
                        [(ngModel)]="model.name"
                        name="name"  #name="ngModel" >
@@ -12,13 +12,13 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="alterEgo">Alter Ego</label>
+                <label >Alter Ego</label>
                 <input type="text" class="form-control"
                        [(ngModel)]="model.alterEgo"
                        name="alterEgo" >
             </div>
             <div class="form-group">
-                <label for="power">Hero Power</label>
+                <label >Hero Power</label>
                 <select class="form-control" required
                         [(ngModel)]="model.power"
                         name="power" #power="ngModel" >
